# Project-LUX

./: .gitignore  LICENSE  LUX_MANIFEST.md  README.md  setup_gateway.sh
.github/workflows/: ci.yml
ai_integration/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ai_integration/src/: App.tsx  index.css
ai_integration/src/components/: ArchitectureView.tsx  FECSimulator.tsx  HardwareDashboard.tsx  HardwareLogs.tsx  ManchesterVisualizer.tsx  ManualsView.tsx  SPSCBuffer.tsx
docs/pcb_rules/: parasitic_nullification.md
docs/schematics/: TIA_OPA380.md  comparator_TLV3501.md
firmware/: CMakeLists.txt
firmware/pio/: manchester_rx.pio  manchester_tx.pio
firmware/src/: lux_rx.c  lux_tx.c  main.c  tusb_config.h  usb_descriptors.c
go_kernel/: frame.go  frame_test.go  go.mod  go.sum  kernel  main.go  ring.go  tun_darwin.go  tun_linux.go
